--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -209,6 +209,14 @@
     <string name="field_creator_size_rows_hint">Rows</string>
     <string name="field_creator_size_columns_hint">Columns</string>
 
+    <string name="field_name_required_error">Field name is required</string>
+    <string name="field_name_exists_error">Field name already exists</string>
+    <string name="field_creator_positive_number_error">Must be a positive number</string>
+    <string name="field_creator_rows_exceeded_error">Cannot exceed %s</string>
+    <string name="field_creator_cols_exceeded_error">Cannot exceed %s</string>
+    <string name="field_creator_total_plots_exceeded_error">Total plots cannot exceed %1$s. Current total: %2$s</string>
+    <string name="field_creation_failed_error">Failed to create field</string>
+
     <string name="field_creator_start_point_instruction">Tap a corner to select starting point</string>
     <string name="field_dimensions_format">Field: %d × %d</string>
 
