--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -352,7 +352,7 @@
     <string name="trait_hidden">Hidden</string>
     <string name="trait_options_title">Options</string>
     <string name="trait_resource_chip_title">Set resource file</string>
-    <string name="trait_brapi_label_chip_title">Swap name field</string>
+    <string name="trait_brapi_swap_name">Swap name field</string>
     <string name="trait_observation_data">Data</string>
     <string name="trait_observation_count">%d observations</string>
     <string name="trait_not_chartable">This trait format cannot be visualized in a chart</string>
@@ -366,6 +366,8 @@
     <string name="trait_brapi_display_dialog_title">Select Button Text</string>
     <string name="trait_brapi_label_display">Show Labels (e.g. %s)</string>
     <string name="trait_brapi_value_display">Show Values (e.g. %s)</string>
+    <string name="error_loading_trait_detail">Error loading trait info</string>
+    <string name="error_updating_trait_resource_file">Error updating trait resource file</string>
 
     <!-- <string name="trait_date_format_example">Date: %s</string>
     <string name="trait_day_format_example">Day of Year: %d</string>
